--- a/notebooks/covid/nyc-covid.ipynb
+++ b/notebooks/covid/nyc-covid.ipynb
@@ -2,13 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('../..')\n",
-    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import os\n",
     "from urllib import request\n",
     "import bs4\n",
@@ -17,28 +24,82 @@
     "from tabula import read_pdf\n",
     "from datetime import datetime\n",
     "\n",
-    "from source.bs4.scraper import Scraper\n",
-    "\n",
-    "data_files = (os.path.join(os.path.dirname(__file__), 'data_files') if '__file__' in locals() else 'data_files')"
+    "from shared.environment import Paths\n",
+    "from shared.bs4.scraper import Scraper"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-04092020-2.pdf\n"
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-04132020-1.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-04122020-2.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-04122020-1.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-04112020-2.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-04112020-1.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-04102020-2.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-04102020-1.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-04092020-2.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-04092020-1.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-04082020-2.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-04082020-1.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-04072020-2.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-04072020-1.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-04062020-2.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-04062020-1.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-04052020-2.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-04052020-1.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-04042020-2.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-04042020-1.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-04032020-2.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-04032020-1.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-04022020-2.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-04022020-1.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-04012020-2.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-04012020-1.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-03312020-2.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-03312020-1.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-03302020-2.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-03302020-1.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-03292020-2.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-03292020-1.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-03282020-2.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-03282020-1.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-03272020-2.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-03272020-1.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-03262020-2.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-03262020-1.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-03252020-2.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-03252020-1.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-03242020-2.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-03242020-1.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-03232020-2.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-03232020-1.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-03222020-2.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-03212020-2.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-03202020-2.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-03192020-2.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-03182020-2.pdf\n",
+      "/assets/doh/downloads/pdf/imm/covid-19-daily-data-summary-03172020-2.pdf\n"
      ]
     }
    ],
    "source": [
     "class NYCCovidDataScraper(Scraper):\n",
     "    \n",
-    "    csv_path = os.path.join(data_files, 'nyc-covid-daily-data-summary.csv')\n",
+    "    csv_path = os.path.join(Paths.data(), 'covid', 'nyc-covid-daily-data-summary.csv')\n",
     "    page = 'https://www1.nyc.gov/site/doh/covid/covid-19-data-archive.page'\n",
     "    basePath = 'https://www1.nyc.gov'\n",
     "    \n",
@@ -98,7 +159,7 @@
     "                               ])\n",
     "        return res_df[['date', 'category', 'key', 'value', 'abs', 'pct']]\n",
     "    \n",
-    "scraper = NYCCovidDataScraper().load(refresh=True, saveToCsv=False)"
+    "scraper = NYCCovidDataScraper().load(refresh=True)"
    ]
   },
   {
@@ -341,13 +402,6 @@
    "source": [
     "scraper"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
