updated market data notebook

--- a/notebooks/covid/data-analysis.ipynb
+++ b/notebooks/covid/data-analysis.ipynb
@@ -21,28 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'startup' from '__main__' (unknown location)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m----------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-142-8f4acdad814f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mstartup\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdatetime\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdate\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mdt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimedelta\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'startup' from '__main__' (unknown location)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datetime import date as dt, timedelta\n",
     "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import plotly.express as px\n",
-    "import plotly.graph_objects as go"
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "from shared.environment import Paths, Secrets"
    ]
   },
   {
@@ -54,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16168,145 +16158,6 @@
     "    template='ggplot2')\n",
     "fig.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/nbvasu/Code/git/notebooks/notebooks/covid\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "print(os.getcwd())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 138,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['/Users/nbvasu/Code/git/notebooks/notebooks/covid', '/usr/local/Cellar/python/3.7.3/Frameworks/Python.framework/Versions/3.7/lib/python37.zip', '/usr/local/Cellar/python/3.7.3/Frameworks/Python.framework/Versions/3.7/lib/python3.7', '/usr/local/Cellar/python/3.7.3/Frameworks/Python.framework/Versions/3.7/lib/python3.7/lib-dynload', '', '/Users/nbvasu/Code/git/notebooks/.venv/notebooks/lib/python3.7/site-packages', '/Users/nbvasu/Code/git/notebooks/.venv/notebooks/lib/python3.7/site-packages/IPython/extensions', '/Users/nbvasu/.ipython', '../..']\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "print(sys.path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "data-analysis.ipynb  \u001b[34mdata_files\u001b[m\u001b[m/          nyc-covid.ipynb\n"
-     ]
-    }
-   ],
-   "source": [
-    "ls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['__name__', '__doc__', '__package__', '__loader__', '__spec__', '__builtin__', '__builtins__', '_ih', '_oh', '_dh', 'In', 'Out', 'get_ipython', 'exit', 'quit', '_', '__', '___', '_i', '_ii', '_iii', '_i1', 'dt', 'timedelta', 'os', 'pd', 'np', 'px', 'go', '_i2', 'fips_lookup_file', 'fips_lookup_df', 'column_map', '_i3', 'data_path', 'start_date', 'end_date', '_i4', 'covid_df', 'date', 'file', 'temp_df', '_i5', 'grouped_df', '_i6', 'covid_us_df', '_i7', 'latest', 'latest_covid_df', 'latest_covid_us_df', '_i8', 'output_cols', 'ts_cols', '_i9', 'top_hotspots_df', '_9', '_i10', 'fig', '_i11', '_11', '_i12', '_12', '_i13', 'states', 'top_counties_df', '_13', '_i14', '_i15', 'top_hotspots', '_i16', 'place', 'place_df', '_i17', '_i18', '_i19', 'cf', '_i20', '_20', '_i21', '_i22', '_22', '_i23', '_i24', '_24', '_i25', '_i26', '_i27', '_i28', '_28', '_i29', '_29', '_i30', '_i31', '_31', '_i32', '_i33', '_33', '_i34', '_34', '_i35', '_35', '_i36', '_36', '_i37', '_i38', '_i39', '_i40', '_i41', '_i42', '_i43', '_i44', '_i45', '_i46', '_46', '_i47', '_i48', '_48', '_i49', '_49', '_i50', '_50', '_i51', '_51', '_i52', '_i53', '_i54', '_54', '_i55', '_55', '_i56', '_i57', '_i58', '_i59', '_i60', '_i61', '_i62', '_i63', '_i64', '_64', '_i65', '_i66', '_66', '_i67', '_67', '_i68', '_68', '_i69', '_i70', '_70', '_i71', '_i72', '_i73', '_i74', '_i75', '_i76', '_i77', '_i78', '_i79', '_i80', '_i81', '_81', '_i82', '_i83', '_83', '_i84', '_84', '_i85', '_85', '_i86', '_i87', '_87', '_i88', '_i89', '_i90', '_i91', '_i92', '_i93', '_i94', '_i95', '_i96', '_i97', '_i98', '_98', '_i99', '_i100', '_100', '_i101', '_101', '_i102', '_102', '_i103', '_i104', '_104', '_i105', '_i106', '_106', '_i107', '_107', '_i108', '_i109', '_i110', '_110', '_i111', '_111', '_i112', '_i113', '_i114', '_i115', '_i116', '_116', '_i117', '_117', '_i118', '_118', '_i119', '_119', '_i120', '_i121', 'sys', '_i122', '_i123', '_exit_code', '_i124', '_i125', '_125', '_i126', '_126', '_i127', '_i128', '_i129', '_i130', '_130', '_i131'])"
-      ]
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "globals().keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 146,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'TMPDIR': '/var/folders/58/q9y8lk6d17nd51jfwqbyf4mr0000gn/T/',\n",
-       " 'SHELL': '/bin/bash',\n",
-       " 'HOME': '/Users/nbvasu',\n",
-       " 'Apple_PubSub_Socket_Render': '/private/tmp/com.apple.launchd.Px3uYLq8fS/Render',\n",
-       " 'SSH_AUTH_SOCK': '/private/tmp/com.apple.launchd.KKI9vKHtKg/Listeners',\n",
-       " 'LOGNAME': 'nbvasu',\n",
-       " 'PATH': '/Users/nbvasu/Code/git/notebooks/.venv/notebooks/bin:./bin:/usr/local/bin:/usr/local/sbin:/Users/nbvasu/.dotfiles/bin:/Users/nbvasu/Code/go/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/share/dotnet:~/.dotnet/tools',\n",
-       " 'XPC_SERVICE_NAME': '0',\n",
-       " 'COMMAND_MODE': 'unix2003',\n",
-       " 'USER': 'nbvasu',\n",
-       " 'SECURITYSESSIONID': '186a7',\n",
-       " 'XPC_FLAGS': '0x0',\n",
-       " '__CF_USER_TEXT_ENCODING': '0x1F5:0x0:0x0',\n",
-       " 'PWD': '/Users/nbvasu/Code/git/notebooks',\n",
-       " 'SHLVL': '2',\n",
-       " 'TERM_PROGRAM': 'vscode',\n",
-       " 'TERM_PROGRAM_VERSION': '1.42.0',\n",
-       " 'LANG': 'en_US.UTF-8',\n",
-       " 'COLORTERM': 'truecolor',\n",
-       " 'TERM': 'xterm-color',\n",
-       " 'OLDPWD': '/Users/nbvasu/Code/git/notebooks',\n",
-       " 'ZSH': '/Users/nbvasu/.dotfiles',\n",
-       " 'PROJECTS': '/Users/nbvasu/Code',\n",
-       " 'GOPATH': '/Users/nbvasu/Code/go',\n",
-       " 'MANPATH': '/usr/local/man:/usr/local/mysql/man:/usr/local/git/man:',\n",
-       " 'EDITOR': 'code',\n",
-       " 'LSCOLORS': 'exfxcxdxbxegedabagacad',\n",
-       " 'CLICOLOR': '1',\n",
-       " 'PROMPT': '\\n$(battery_status)in $(directory_name) $(git_dirty)$(need_push)\\n› ',\n",
-       " 'RPROMPT': '%{\\x1b[01;36m%}%{\\x1b[00m%}',\n",
-       " 'PS1': '(notebooks) \\n$(battery_status)in $(directory_name) $(git_dirty)$(need_push)\\n› ',\n",
-       " 'VIRTUAL_ENV': '/Users/nbvasu/Code/git/notebooks/.venv/notebooks',\n",
-       " '_': '/Users/nbvasu/Code/git/notebooks/.venv/notebooks/bin/jupyter',\n",
-       " '__PYVENV_LAUNCHER__': '/Users/nbvasu/Code/git/notebooks/.venv/notebooks/bin/python3',\n",
-       " 'KERNEL_LAUNCH_TIMEOUT': '40',\n",
-       " 'JPY_PARENT_PID': '8905',\n",
-       " 'PAGER': 'cat',\n",
-       " 'GIT_PAGER': 'cat',\n",
-       " 'MPLBACKEND': 'module://ipykernel.pylab.backend_inline',\n",
-       " 'GDAL_DATA': '/Users/nbvasu/Code/git/notebooks/.venv/notebooks/lib/python3.7/site-packages/fiona/gdal_data'}"
-      ]
-     },
-     "execution_count": 146,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "env"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
